fix: Relocate Events to run after visually building drink and fix ticket wrap overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,7 @@ header {
 
 /* Endless Ticker */
 .ticker-wrap {
-  width: 100vw;
+  width: calc(100% + 3rem);
   margin-left: -1.5rem; /* Break out of section padding */
   overflow: hidden;
   background: var(--c-pink);
